# vehicle_detection_haarcascades

./: .gitignore  CMakeLists.txt  README.md  run_vehicle_detection.bat  run_vehicle_detection_video1.sh  run_vehicle_detection_video2.sh  vehical_and_pedestrain_detection.py  vehicle_detection.cpp  vehicle_detection.py
vs2013/: project.sln  project.vcxproj  project.vcxproj.filters
